...

  return !loading && isConnected ? (
    <AccountButton
      style={accountStyle}
      balance={balance}
      disabled={disabled}
      testID="account-button"
    />
  ) : (
    <ConnectButton
      style={connectStyle}
      size={size}
      label={label}
...
